--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <footer>
 
-        <p id="footer">Desenvolvido com por <a href="https://github.com/rfcosta85" target="_blank" rel="external"accesskey="r"> &#x2764 Rodrigo Costa</a></p>
+        <p id="footer">Desenvolvido com <b style="color: brown;">&#x2764</b>  por <a href="https://github.com/rfcosta85" target="_blank" rel="external"accesskey="r"> Rodrigo Costa</a></p>
 
     </footer>
 
