--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 
                 <img id="aside" src="Linkedin_Facebook_Cinza_Com_Terno.png" alt="Foto de Perfil Rodrigo Costa">
                 <h2 class="titulos">Rodrigo Costa</h2>
-                <p class="perfil">Aluno de Análise e Desenvolvimento de Sistemas, pela Univerisadade Estácio de Sá, apaixonado por conhecimento, tecnologia e games. <p class="perfil">Atualmente um ávido consumidor de tudo relacionado ao front-end, mas sem deixar de lado o bom é velho back-end.</p> <p class="perfil"> Bastante apaixonado também por futebol, daqueles que tentou ser atleta, mas o seu talento não permitiu! &#x1F602</p></p>
+                <p class="perfil">Aluno de Análise e Desenvolvimento de Sistemas, pela Univerisadade Estácio de Sá, apaixonado por conhecimento, tecnologia e games. <p class="perfil">Atualmente um ávido consumidor de tudo relacionado ao front-end, mas sem deixar de lado o bom e velho back-end.</p> <p class="perfil"> Bastante apaixonado também por futebol, daqueles que tentou ser atleta, mas o seu talento não permitiu! &#x1F602</p></p>
                 <h2 class="titulos">Minhas redes sociais</h2>
                 <ul id="aside">
                     <li><img class="socials" src="icone-github.png" alt="ícone GitHub"><a class="socials" href="https://github.com/rfcosta85" target="_blank" rel="external" accesskey="g"> /rfcosta85</a> Me adiciona la no GitHub</li>
